--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ build/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Library packages should not commit the "pubspec.lock" file. Source:
+# https://dart.dev/guides/libraries/private-files#pubspeclock
+pubspec.lock
